fix(css): add wordwrap for links

--- a/static/style.css
+++ b/static/style.css
@@ -35,6 +35,7 @@ footer > h1 {
 
 a {
     text-decoration: none;
+    word-wrap: break-word;
 }
 
 a:hover {
